2012-02-08  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-coding.txt, README.build: Add configure notes.
	
2012-02-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel-parse/: Support Supermicro SEL CPU Temp events.
	
2012-02-06  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix option typo.
	
2012-01-31  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Update supported motherboard information
	based on tests from Ryan Cox.

2012-01-30  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Update supported motherboard information
	based on tests from Ryan Cox.

2012-01-27  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Update information based on tests from
	Ryan Cox.
	
2012-01-18  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Clarify usefulness of event direction.
	
2012-01-17  Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower.h: Redo packet validation macros.

	* libfreeipmi/include/freeipmi/cmds/ipmi-chassis-cmds.h: Define
	macros for on vs off power.
	
	* ipmipower/ipmipower_powercmd.c (_process_ipmi_packets): Use new
	macros.
	
2012-01-16  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-inband.man: Clarify argument input.

2012-01-15  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add some OpenIPMI linux kerneld driver
	notes.
	
2012-01-15  Albert Chu <chu11@llnl.gov>

	Merge branch dellsolinstancecapacity

	* libipmiconsole/ipmiconsole_processing.c (_check_sol_activated):
	Workaround bug in Dell Poweredge M605, Dell Poweredge M610, and
	Dell Poweredge M915 where instance count of SOL is returned as 0.

2012-01-13  Albert Chu <chu11@llnl.gov>

	* Audit and add asserts appropriately to large number of functions.

	* common/configtool/: All config tools support hostranges, so
	replace PSTDOUT_PRINTF with pstdout_printf, PSTDOUT_FPRINTF with
	pstdout_fprintf, and PSTDOUT_PERROR with pstdout_perror.
	
2012-01-13  Albert Chu <chu11@llnl.gov>

	* doc/solstatediagram.dot: SOL State Diagram documentation.
	